Staging (#180)
* Fix annotation config and interface

* Add proper SnpEff configuration

* Beqin SnpEff database management

* Start snpEff database download

* Add automatic genome download

* Add snpEff genome installation

* Add online building of SnpEff database

* Minor change

* fix: default genome download seems ok but 1sec download genome can crash

* fix: snpeff upload from files seems ok

* fix: snpeff import ok + start seems ok

* Improvements on SnpEff integration

* Minor fix

* Split up shared code from main.js into common.js (#131)

* Embed Oracle JDK instead of Zulu JRE into bundles

* Now averaging cumulated VCF field values on #variants per interval

* Finalized calculation of VCF numeric field series as averaged

... rather than cumulated, as it used to be.

* Fixed VCF field series removal

... also set MongoDB password via placeholder in
applicationContext-data.xml, to avoiding pushing passwords to source
control

* Merge from master (#139)

* Update build.yml

* Reverted back to original build.sh

* Added missing file (possibly forgot to commmit/push it) (#136)

* added python build file to get dynamically current pom.xml dependencies, add build.sh deprecated and improve current github workflow (#138)

Co-authored-by: Dorian Grasset <dorian.grasset@cirad.fr>

---------

Co-authored-by: Dorian Grasset <dorian.grasset@cirad.fr>

* Added support for user email addresses

* Displaying imports in admin process list (#140)

* feat(execution-message): update GigwaModuleManager

* Finalized inclusion of import processes in admin-process list

* Finalized display of imports in admin process list

---------

Co-authored-by: Dorian Grasset <dorian.grasset.contact@gmail.com>

* Feat/change password (#141)

* feat(change-password): added a menu for logged in users to change password

* feat(change-password): send mail code

* feat(change-password): add new services

* feat(change-password): feature implemented

* feat(change-pass